--- a/my-react-app/package.json
+++ b/my-react-app/package.json
@@ -12,6 +12,8 @@
     "axios": "^1.6.1",
     "bootstrap": "^5.3.2",
     "cors": "^2.8.5",
+    "firebase": "^10.7.1",
+    "firebaseui": "^6.1.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
     "react-confirm": "^0.3.0-7",
@@ -19,6 +21,7 @@
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
+    "reactfire": "^4.2.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
